[metadata]
name = roadtonowhere
description="Check documents for broken urls"
long_description = file: README.md
license = MIT
license_files = LICENSE
author = Koen Westendorp
author_email = koensswestendorp@gmail.com
url = https://github.com/koenwestendorp/roadtonowhere
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.10
packages = roadtonowhere
install_requires = requests

[options.entry_points]
console_scripts =
    roadtonowhere = roadtonowhere.__main__:main

